# wizard

./: CMakeLists.txt  Wizard.pro  abstractionendpage.cpp  abstractionendpage.h  abstractionendpage.ui  generalPage.cpp  generalPage.h  generalPage.ui  generator.cpp  generator.h  inOutPage.cpp  inOutPage.h  inOutPage.ui  introPage.cpp  introPage.h  introPage.ui  iolinewidget.cpp  iolinewidget.h  iolinewidget.ui  iowidget.cpp  iowidget.h  nodepage.cpp  nodepage.h  nodepage.ui  templates.qrc  wizard.cpp  wizard.h
templates/Node/: classNode.cpp  classNode.h  classNode.json
templates/abstraction/: class.h
templates/node/: classNode.cpp
templates/plugin/: class.cpp  class.h  classPlugin.cpp  classPlugin.h  classPlugin.json
templates/stubs/: abstractionInput  abstractionOutput  nodeCtrInput  nodeCtrOutput  nodePrivateInput  nodePrivateOutput  pluginInCpp  pluginInH  pluginOutCpp  pluginOutH  pluginPrivateH
